# Valida_Gera_CPF

./: README.md  cpf_uteis.py  gui_uteis.py  main.py  pyproject.toml
tests/: test_cpf_uteis.py
